BAU: Move PrivateKeyJWT parsing into TokenHandler
- We need the keyId from the JWT header to fetch the right key from the JWKS endpoint in the future.